w03 final touches
