# controllers/objectsController.js
@@ -16,27 +16,33 @@ const getAll = async (req, res) => {
 }
 
 const getObject = async (req, res) => {
-    const objectId = ObjectId(req.params.id);
+    const objectId = new ObjectId(req.params.id);
     const response = await mongodb
         .getDatabase()
         .db("project2")
         .collection("objects")
         .find({ _id: objectId });
-        response.toArray().then((object) => {
+
+        const objectArray = await response.toArray();
+
+        if (objectArray.length === 0) {
+            return res.status(404).json({ error: "Object not found" });
+        }
+
+        const object = objectArray[0];
         console.log(object);
-        console.log(response);
         res.setHeader("Content-Type", "application/json");
-        res.status(200).json(object);     
-    });
+        res.status(200).json(object);
+
 };
 
 const createObject = async (req, res) => {
 const  object = {
     name: req.body.name,
-    type: req.body.type,
+    shape: req.body.shape,
     height: req.body.height,
     width: req.body.width,
-    weight: req.body.weight,
+    unit: req.body.unit,
     color: req.body.color,
     origin: req.body.origin,
     description: req.body.description,
@@ -44,14 +50,25 @@ const  object = {
     updatedAt: new Date()
 };
 
+
+  const existingObject = await mongodb
+    .getDatabase()
+    .db("project2")
+    .collection("objects")
+    .findOne({ name: object.name });
+  if (existingObject) {
+    return res.status(409).json({ error: "Object with this name  already exists" });
+  }
+
 const response = await mongodb.getDatabase()
     .db("project2")
     .collection("objects")
     .insertOne(object);
     console.log(response);
     if (response.acknowledged) {
-        res.status(204).send();
-    } else {
+        res.status(201).json({"response": "Object created",
+            ObjectId: response.insertedId});
+     } else {
         res.status(500).json({error: response.error || "Failed to create object" });
     }
 
@@ -62,10 +79,10 @@ const updateObject = async (req, res) => {
     const objectId = new ObjectId(req.params.id);
     const object = {
         name: req.body.name,
-        type: req.body.type,
+        shape: req.body.shape,
         height: req.body.height,
         width: req.body.width,
-        weight: req.body.weight,
+        unit: req.body.unit,
         color: req.body.color,
         origin: req.body.origin,
         description: req.body.description,
@@ -78,7 +95,8 @@ const updateObject = async (req, res) => {
         .collection("objects")
         .replaceOne({ _id: objectId }, object );
         if (response.modifiedCount > 0) {
-            res.status(204).send();
+            console.log(response);
+            res.status(202).send("object updated");
         } else {
             res.status(500).json({error: response.error || "Failed to update object" });
         }
@@ -93,7 +111,7 @@ const response = await mongodb
     .deleteOne({ _id: objectId });
     console.log(response);
     if (response.deletedCount > 0) {
-        res.status(204).send();
+        res.status(201).send("Object deleted");
     } else {
         res.status(500).json({error: response.error || "Failed to delete object" });
     }
