# swagger-output.json
@@ -72,8 +72,14 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
           },
           "500": {
             "description": "Internal Server Error"
@@ -101,6 +107,12 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -134,6 +146,9 @@
                 "objectIds": {
                   "example": "any"
                 },
+                "lastContacted": {
+                  "example": "any"
+                },
                 "birthday": {
                   "example": "any"
                 }
@@ -142,8 +157,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "202": {
+            "description": "Accepted"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -164,8 +182,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
@@ -203,7 +221,7 @@
                 "name": {
                   "example": "any"
                 },
-                "type": {
+                "shape": {
                   "example": "any"
                 },
                 "height": {
@@ -212,13 +230,10 @@
                 "width": {
                   "example": "any"
                 },
-                "weight": {
+                "unit": {
                   "example": "any"
                 },
                 "color": {
-                  "example": "any"
-                },
-                "material": {
                   "example": "any"
                 },
                 "origin": {
@@ -232,8 +247,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
+          },
+          "409": {
+            "description": "Conflict"
           },
           "500": {
             "description": "Internal Server Error"
@@ -261,6 +279,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
@@ -285,7 +306,7 @@
                 "name": {
                   "example": "any"
                 },
-                "type": {
+                "shape": {
                   "example": "any"
                 },
                 "height": {
@@ -294,13 +315,10 @@
                 "width": {
                   "example": "any"
                 },
-                "weight": {
+                "unit": {
                   "example": "any"
                 },
                 "color": {
-                  "example": "any"
-                },
-                "material": {
                   "example": "any"
                 },
                 "origin": {
@@ -314,8 +332,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "202": {
+            "description": "Accepted"
           },
           "500": {
             "description": "Internal Server Error"
